--- a/src/main.scss
+++ b/src/main.scss
@@ -11,10 +11,16 @@ body {
   flex-direction: column;
   align-items: center;
   color: rgb(253, 235, 37);
-  font-family: puffy;
-
   .title {
     font-size: 46px;
     letter-spacing: 2px;
+  }
+  .game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    background-color: beige;
+    padding: 20px 40px;
   }
 }
