--- a/src/menu.scss
+++ b/src/menu.scss
@@ -3,16 +3,23 @@
   gap: 20px;
   width: 100%;
   justify-content: space-evenly;
+  align-items: center;
   .coins-container {
     display: flex;
     align-items: center;
+    flex: 1;
     gap: 10px;
+    background: black;
+    padding: 10px;
+    border-radius: 6px;
+    border: 2px solid rgb(253, 235, 37);
     .coin-img {
       height: 25px;
       width: 25px;
     }
     p {
-      color: black;
+      margin: 0;
+      font-size: 30px;
     }
   }
   .spin-button {
@@ -21,13 +28,12 @@
     text-transform: uppercase;
     border: none;
     background: rgb(37, 162, 58);
-    padding: 20px;
-    border-radius: 20%;
-    box-shadow: 0 9px grey;
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
   }
   .spin-button:active {
     background: rgb(248, 50, 50);
-    box-shadow: 0 5px darkgrey;
     transform: translateY(4px);
   }
 }
