--- a/src/menu.scss
+++ b/src/menu.scss
@@ -6,13 +6,13 @@
   align-items: center;
   .coins-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     flex: 1;
     gap: 10px;
     background: black;
     padding: 10px;
     border-radius: 6px;
-    border: 2px solid rgb(253, 235, 37);
     .coin-img {
       height: 25px;
       width: 25px;
@@ -23,13 +23,16 @@
     }
   }
   .spin-button {
-    color: white;
+    color: beige;
+    font-weight: bold;
+    font-size: 16px;
     letter-spacing: 2px;
     text-transform: uppercase;
     border: none;
     background: rgb(37, 162, 58);
-    height: 80px;
-    width: 80px;
+    border: 2px black solid;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
   }
   .spin-button:active {
