chore: add short delay before results show

--- a/src/main.scss
+++ b/src/main.scss
@@ -25,6 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 400px;
     gap: 40px;
     background-color: rgb(253, 235, 37);
     border-radius: 8px;
