--- a/src/main.css
+++ b/src/main.css
@@ -14,12 +14,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+  padding: 40px 10px;
   color: rgb(253, 235, 37);
 }
 .main-container .title {
   font-size: 46px;
   letter-spacing: 2px;
   font-family: puffy;
+  margin: 0;
 }
 .main-container .game-container {
   display: flex;
@@ -30,6 +33,22 @@ body {
   background-color: rgb(253, 235, 37);
   border-radius: 8px;
   padding: 20px 40px;
+}
+.main-container .help-container {
+  border-radius: 8px;
+  background-color: rgb(37, 185, 253);
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+.main-container .help-container p {
+  margin: 0;
+  color: black;
+  font-size: 20px;
+  letter-spacing: 2px;
+}
+.main-container .help-container:hover {
+  background-color: rgb(80, 200, 255);
 }
 
 /*# sourceMappingURL=main.css.map */
