--- a/src/main.scss
+++ b/src/main.scss
@@ -15,11 +15,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+  padding: 40px 10px;
   color: rgb(253, 235, 37);
   .title {
     font-size: 46px;
     letter-spacing: 2px;
     font-family: puffy;
+    margin: 0;
   }
   .game-container {
     display: flex;
@@ -30,5 +33,21 @@ body {
     background-color: rgb(253, 235, 37);
     border-radius: 8px;
     padding: 20px 40px;
+  }
+  .help-container {
+    border-radius: 8px;
+    background-color: rgb(37, 185, 253);
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px 15px;
+    cursor: pointer;
+    p {
+      margin: 0;
+      color: black;
+      font-size: 20px;
+      letter-spacing: 2px;
+    }
+  }
+  .help-container:hover {
+    background-color: rgb(80, 200, 255);
   }
 }
