--- a/src/rules.scss
+++ b/src/rules.scss
@@ -1,34 +1,27 @@
-.you-lose-container {
-  color: beige;
+.rules-container {
   background: black;
-  padding: 20px 40px;
-  font-size: 24px;
+  color: beige;
   font-family: pixel;
-  letter-spacing: 2px;
+  gap: 40px;
+  padding: 40px 0;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  align-items: center;
   .title {
-    margin: 0;
     font-size: 46px;
+    margin: 0;
   }
-  .stats-container {
-    .stat-row {
-      display: flex;
-      justify-content: space-between;
-    }
-  }
-  .play-again-container {
+  .close-rules-container {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px 0;
-    .play-button {
+    .close-button {
       cursor: pointer;
       animation: blink 2s steps(5, start) infinite;
       padding: 10px;
     }
-    .play-button:hover {
+    .close-button:hover {
       color: black;
       background: beige;
       animation-play-state: paused;
