--- a/src/main.css
+++ b/src/main.css
@@ -25,6 +25,7 @@ body {
   margin: 0;
 }
 .main-container .game-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,20 +35,29 @@ body {
   border-radius: 8px;
   padding: 20px 40px;
 }
-.main-container .help-container {
+.main-container .game-container .help-wrapper {
+  position: absolute;
+  width: 100%;
+  bottom: -60px;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+.main-container .game-container .help-wrapper .help-container {
+  width: fit-content;
   border-radius: 8px;
   background-color: rgb(37, 185, 253);
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px 15px;
   cursor: pointer;
 }
-.main-container .help-container p {
+.main-container .game-container .help-wrapper .help-container p {
   margin: 0;
   color: black;
   font-size: 20px;
   letter-spacing: 2px;
 }
-.main-container .help-container:hover {
+.main-container .game-container .help-wrapper .help-container:hover {
   background-color: rgb(80, 200, 255);
 }
 
