--- a/src/message.scss
+++ b/src/message.scss
@@ -12,4 +12,13 @@
     letter-spacing: 2px;
     text-transform: uppercase;
   }
+  .fast-blink {
+    animation: fastBlink 1s steps(5, start) infinite;
+  }
+}
+
+@keyframes fastBlink {
+  to {
+    visibility: hidden;
+  }
 }
