--- a/src/rules.css
+++ b/src/rules.css
@@ -9,7 +9,7 @@
   align-items: center;
 }
 .rules-container .title {
-  font-size: 46px;
+  font-size: 3rem;
   margin: 0;
 }
 .rules-container .close-rules-container {
