--- a/src/slots.scss
+++ b/src/slots.scss
@@ -4,10 +4,10 @@
   align-items: center;
   width: 100%;
 
-  gap: 10px;
+  gap: 1.5rem;
   .fruit-holder {
-    height: 80px;
-    width: 80px;
+    height: 9rem;
+    width: 9rem;
     background: rgb(214, 241, 255);
     border: 2px solid black;
     border-radius: 6px;
@@ -15,8 +15,8 @@
     justify-content: center;
     align-items: center;
     .fruit {
-      height: 50px;
-      width: 50px;
+      height: 6rem;
+      width: 6rem;
     }
     .hide-img {
       display: none;
