--- a/src/menu.css
+++ b/src/menu.css
@@ -1,6 +1,6 @@
 .menu-container {
   display: flex;
-  gap: 20px;
+  gap: 2rem;
   width: 100%;
   justify-content: space-evenly;
   align-items: center;
@@ -16,24 +16,24 @@
   border-radius: 6px;
 }
 .menu-container .coins-container .coin-img {
-  height: 25px;
-  width: 25px;
+  height: 2rem;
+  width: 2rem;
 }
 .menu-container .coins-container p {
   margin: 0;
-  font-size: 30px;
+  font-size: 2rem;
 }
 .menu-container .spin-button {
   color: beige;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1.5rem;
   letter-spacing: 2px;
   text-transform: uppercase;
   border: none;
   background: rgb(37, 162, 58);
   border: 2px black solid;
-  height: 70px;
-  width: 70px;
+  height: 6rem;
+  width: 6rem;
   border-radius: 50%;
 }
 .menu-container .spin-button:active {
