--- a/src/menu.scss
+++ b/src/menu.scss
@@ -1,6 +1,6 @@
 .menu-container {
   display: flex;
-  gap: 20px;
+  gap: 2rem;
   width: 100%;
   justify-content: space-evenly;
   align-items: center;
@@ -14,25 +14,25 @@
     padding: 10px;
     border-radius: 6px;
     .coin-img {
-      height: 25px;
-      width: 25px;
+      height: 2rem;
+      width: 2rem;
     }
     p {
       margin: 0;
-      font-size: 30px;
+      font-size: 2rem;
     }
   }
   .spin-button {
     color: beige;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 1.5rem;
     letter-spacing: 2px;
     text-transform: uppercase;
     border: none;
     background: rgb(37, 162, 58);
     border: 2px black solid;
-    height: 70px;
-    width: 70px;
+    height: 6rem;
+    width: 6rem;
     border-radius: 50%;
   }
   .spin-button:active {
