--- a/src/message.css
+++ b/src/message.css
@@ -12,6 +12,7 @@
   font-family: pixel;
   letter-spacing: 2px;
   text-transform: uppercase;
+  font-size: 1.25rem;
 }
 .message-container .fast-blink {
   animation: fastBlink 1s steps(5, start) infinite;
