--- a/src/message.scss
+++ b/src/message.scss
@@ -11,6 +11,7 @@
     font-family: pixel;
     letter-spacing: 2px;
     text-transform: uppercase;
+    font-size: 1.25rem;
   }
   .fast-blink {
     animation: fastBlink 1s steps(5, start) infinite;
