--- a/src/rules.scss
+++ b/src/rules.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   .title {
-    font-size: 46px;
+    font-size: 3rem;
     margin: 0;
   }
   .close-rules-container {
