--- a/src/youLose.scss
+++ b/src/youLose.scss
@@ -2,7 +2,7 @@
   color: beige;
   background: black;
   padding: 20px 40px;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: pixel;
   letter-spacing: 2px;
   display: flex;
@@ -10,7 +10,8 @@
   gap: 30px;
   .title {
     margin: 0;
-    font-size: 46px;
+    font-size: 3rem;
+    text-align: center;
   }
   .stats-container {
     .stat-row {
