--- a/src/main.css
+++ b/src/main.css
@@ -39,29 +39,25 @@ body {
   border-radius: 8px;
   padding: 2rem 4rem;
 }
-.main-container .game-container .help-wrapper {
-  position: absolute;
-  width: 100%;
-  bottom: -60px;
+.main-container .help-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: end;
 }
-.main-container .game-container .help-wrapper .help-container {
+.main-container .help-wrapper .help-container {
   width: fit-content;
   border-radius: 8px;
   background-color: rgb(37, 185, 253);
   font-family: Arial, Helvetica, sans-serif;
-  padding: 10px 15px;
+  padding: 1rem 1.5rem;
   cursor: pointer;
 }
-.main-container .game-container .help-wrapper .help-container p {
+.main-container .help-wrapper .help-container p {
   margin: 0;
   color: black;
-  font-size: 20px;
+  font-size: 2rem;
   letter-spacing: 2px;
 }
-.main-container .game-container .help-wrapper .help-container:hover {
+.main-container .help-wrapper .help-container:hover {
   background-color: rgb(80, 200, 255);
 }
 
