--- a/src/main.scss
+++ b/src/main.scss
@@ -36,30 +36,26 @@ body {
     background-color: rgb(253, 235, 37);
     border-radius: 8px;
     padding: 2rem 4rem;
-    .help-wrapper {
-      position: absolute;
-      width: 100%;
-      bottom: -60px;
-      display: flex;
-      flex-direction: column;
-      align-items: end;
-      .help-container {
-        width: fit-content;
-        border-radius: 8px;
-        background-color: rgb(37, 185, 253);
-        font-family: Arial, Helvetica, sans-serif;
-        padding: 10px 15px;
-        cursor: pointer;
-        p {
-          margin: 0;
-          color: black;
-          font-size: 20px;
-          letter-spacing: 2px;
-        }
+  }
+  .help-wrapper {
+    display: flex;
+    flex-direction: column;
+    .help-container {
+      width: fit-content;
+      border-radius: 8px;
+      background-color: rgb(37, 185, 253);
+      font-family: Arial, Helvetica, sans-serif;
+      padding: 1rem 1.5rem;
+      cursor: pointer;
+      p {
+        margin: 0;
+        color: black;
+        font-size: 2rem;
+        letter-spacing: 2px;
       }
-      .help-container:hover {
-        background-color: rgb(80, 200, 255);
-      }
+    }
+    .help-container:hover {
+      background-color: rgb(80, 200, 255);
     }
   }
 }
