--- a/src/menu.scss
+++ b/src/menu.scss
@@ -2,16 +2,16 @@
   display: flex;
   gap: 2rem;
   width: 100%;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   .coins-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex: 1;
-    gap: 10px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
     background: black;
-    padding: 10px;
+    padding: 0.75rem;
     border-radius: 6px;
     .coin-img {
       height: 2rem;
@@ -29,11 +29,15 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     border: none;
-    background: rgb(37, 162, 58);
+    background: rgb(29, 131, 46);
     border: 2px black solid;
     height: 6rem;
     width: 6rem;
     border-radius: 50%;
+    cursor: pointer;
+  }
+  .spin-button:hover {
+    background: rgb(38, 191, 63);
   }
   .spin-button:active {
     background: rgb(248, 50, 50);
@@ -43,5 +47,26 @@
     pointer-events: none;
     background: rgb(248, 50, 50);
     transform: translateY(4px);
+  }
+  .help-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    background-color: rgb(37, 185, 253);
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem 1.5rem;
+    border: 2px solid black;
+    cursor: pointer;
+    p {
+      margin: 0;
+      color: black;
+      font-size: 2rem;
+      letter-spacing: 2px;
+    }
+  }
+  .help-container:hover {
+    background-color: rgb(80, 200, 255);
   }
 }
