--- a/src/menu.css
+++ b/src/menu.css
@@ -23,7 +23,12 @@
   margin: 0;
   font-size: 2rem;
 }
-.menu-container .spin-button {
+.menu-container .spin-button-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+.menu-container .spin-button-container .spin-button {
   color: beige;
   font-weight: bold;
   font-size: 1.5rem;
@@ -37,14 +42,14 @@
   border-radius: 50%;
   cursor: pointer;
 }
-.menu-container .spin-button:hover {
+.menu-container .spin-button-container .spin-button:hover {
   background: rgb(38, 191, 63);
 }
-.menu-container .spin-button:active {
+.menu-container .spin-button-container .spin-button:active {
   background: rgb(248, 50, 50);
   transform: translateY(4px);
 }
-.menu-container .disabled {
+.menu-container .spin-button-container .disabled {
   pointer-events: none;
   background: rgb(248, 50, 50);
   transform: translateY(4px);
@@ -57,7 +62,7 @@
   border-radius: 8px;
   background-color: rgb(37, 185, 253);
   font-family: Arial, Helvetica, sans-serif;
-  padding: 1rem 1.5rem;
+  padding: 0.75rem 1rem;
   border: 2px solid black;
   cursor: pointer;
 }
