--- a/src/menu.scss
+++ b/src/menu.scss
@@ -22,32 +22,38 @@
       font-size: 2rem;
     }
   }
-  .spin-button {
-    color: beige;
-    font-weight: bold;
-    font-size: 1.5rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    border: none;
-    background: rgb(29, 131, 46);
-    border: 2px black solid;
-    height: 6rem;
-    width: 6rem;
-    border-radius: 50%;
-    cursor: pointer;
+  .spin-button-container {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    .spin-button {
+      color: beige;
+      font-weight: bold;
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      border: none;
+      background: rgb(29, 131, 46);
+      border: 2px black solid;
+      height: 6rem;
+      width: 6rem;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+    .spin-button:hover {
+      background: rgb(38, 191, 63);
+    }
+    .spin-button:active {
+      background: rgb(248, 50, 50);
+      transform: translateY(4px);
+    }
+    .disabled {
+      pointer-events: none;
+      background: rgb(248, 50, 50);
+      transform: translateY(4px);
+    }
   }
-  .spin-button:hover {
-    background: rgb(38, 191, 63);
-  }
-  .spin-button:active {
-    background: rgb(248, 50, 50);
-    transform: translateY(4px);
-  }
-  .disabled {
-    pointer-events: none;
-    background: rgb(248, 50, 50);
-    transform: translateY(4px);
-  }
+
   .help-container {
     flex: 1;
     display: flex;
@@ -56,7 +62,7 @@
     border-radius: 8px;
     background-color: rgb(37, 185, 253);
     font-family: Arial, Helvetica, sans-serif;
-    padding: 1rem 1.5rem;
+    padding: 0.75rem 1rem;
     border: 2px solid black;
     cursor: pointer;
     p {
